--- a/frontends/gui/mono-debugger.glade
+++ b/frontends/gui/mono-debugger.glade
@@ -2,6 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "http://glade.gnome.org/glade-2.0.dtd">
 
 <glade-interface>
+<requires lib="libgnome.so"/>
 
 <widget class="GtkWindow" id="target_window">
   <property name="title" translatable="yes">Mono Debugger - Target</property>
@@ -35,7 +36,7 @@
 		    <widget class="GtkImageMenuItem" id="quit1">
 		      <property name="visible">True</property>
 		      <property name="stock_item">GNOMEUIINFO_MENU_EXIT_ITEM</property>
-		      <signal name="activate" handler="on_quit1_activate" last_modification_time="Sun, 15 Sep 2002 15:03:24 GMT"/>
+		      <signal name="activate" handler="on_quit_activate" last_modification_time="Mon, 16 Sep 2002 12:19:42 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -70,6 +71,26 @@
 		      <signal name="activate" handler="on_menu_view_registers_activate" last_modification_time="Sun, 15 Sep 2002 15:06:11 GMT"/>
 		    </widget>
 		  </child>
+
+		  <child>
+		    <widget class="GtkCheckMenuItem" id="menu_view_disassembler_window">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Disassembler window</property>
+		      <property name="use_underline">True</property>
+		      <property name="active">True</property>
+		      <signal name="activate" handler="on_menu_view_disassembler_window_activate" last_modification_time="Mon, 16 Sep 2002 13:13:46 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkCheckMenuItem" id="menu_view_source_code_window">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Source code window</property>
+		      <property name="use_underline">True</property>
+		      <property name="active">True</property>
+		      <signal name="activate" handler="on_menu_view_source_code_window_activate" last_modification_time="Mon, 16 Sep 2002 13:13:46 GMT"/>
+		    </widget>
+		  </child>
 		</widget>
 	      </child>
 	    </widget>
@@ -87,7 +108,7 @@
 		    <widget class="GtkImageMenuItem" id="about1">
 		      <property name="visible">True</property>
 		      <property name="stock_item">GNOMEUIINFO_MENU_ABOUT_ITEM</property>
-		      <signal name="activate" handler="on_about1_activate" last_modification_time="Sun, 15 Sep 2002 15:03:24 GMT"/>
+		      <signal name="activate" handler="on_about_activate" last_modification_time="Mon, 16 Sep 2002 12:46:02 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -234,7 +255,6 @@
 </widget>
 
 <widget class="GtkWindow" id="main_window">
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Mono Debugger</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -374,7 +394,6 @@
 </widget>
 
 <widget class="GtkWindow" id="disassembler_window">
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Mono Debugger - Disassembler view</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -443,7 +462,6 @@
 </widget>
 
 <widget class="GtkDialog" id="register_dialog">
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Mono Debugger - Registers</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -516,7 +534,6 @@
 </widget>
 
 <widget class="GtkDialog" id="backtrace_dialog">
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Mono Debugger - Backtrace</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
