--- a/frontends/gui/debugger.glade
+++ b/frontends/gui/debugger.glade
@@ -1898,7 +1898,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkStatusbar" id="target-status">
+	    <widget class="GtkStatusbar" id="status-bar">
 	      <property name="visible">True</property>
 	      <property name="has_resize_grip">True</property>
 	    </widget>
