--- a/frontends/gui/debugger.glade
+++ b/frontends/gui/debugger.glade
@@ -156,7 +156,7 @@
 			  <property name="label" translatable="yes">Step Ou_t</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="OnStepOutActivate" last_modification_time="Tue, 17 Sep 2002 22:10:49 GMT"/>
-			  <accelerator key="F11" modifiers="GDK_SHIFT_MASK" signal="activate"/>
+			  <accelerator key="F11" modifiers="0" signal="activate"/>
 			</widget>
 		      </child>
 
@@ -172,7 +172,7 @@
 			  <property name="label" translatable="yes">I_nstruction Step Into</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="OnInstructionStepIntoActivate" last_modification_time="Tue, 17 Sep 2002 22:10:49 GMT"/>
-			  <accelerator key="F8" modifiers="GDK_SHIFT_MASK" signal="activate"/>
+			  <accelerator key="F6" modifiers="0" signal="activate"/>
 			</widget>
 		      </child>
 
@@ -182,7 +182,7 @@
 			  <property name="label" translatable="yes">In_struction Step Over</property>
 			  <property name="use_underline">True</property>
 			  <signal name="activate" handler="OnInstructionStepOverActivate" last_modification_time="Tue, 17 Sep 2002 22:10:49 GMT"/>
-			  <accelerator key="F9" modifiers="GDK_SHIFT_MASK" signal="activate"/>
+			  <accelerator key="F7" modifiers="0" signal="activate"/>
 			</widget>
 		      </child>
 		    </widget>
@@ -1862,6 +1862,51 @@
 			  <property name="type">tab</property>
 			</packing>
 		      </child>
+
+		      <child>
+			<widget class="GtkScrolledWindow" id="scrolledwindow5">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+			  <property name="shadow_type">GTK_SHADOW_NONE</property>
+			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
+
+			  <child>
+			    <widget class="GtkViewport" id="variable-display">
+			      <property name="visible">True</property>
+			      <property name="shadow_type">GTK_SHADOW_IN</property>
+
+			      <child>
+				<placeholder/>
+			      </child>
+			    </widget>
+			  </child>
+			</widget>
+			<packing>
+			  <property name="tab_expand">False</property>
+			  <property name="tab_fill">True</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkLabel" id="label29">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Locals</property>
+			  <property name="use_underline">False</property>
+			  <property name="use_markup">False</property>
+			  <property name="justify">GTK_JUSTIFY_LEFT</property>
+			  <property name="wrap">False</property>
+			  <property name="selectable">False</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+			<packing>
+			  <property name="type">tab</property>
+			</packing>
+		      </child>
 		    </widget>
 		    <packing>
 		      <property name="shrink">True</property>
@@ -1934,8 +1979,10 @@
 
       <child internal-child="action_area">
 	<widget class="GtkHButtonBox" id="dialog-action_area1">
+	  <property name="border_width">5</property>
 	  <property name="visible">True</property>
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
+	  <property name="spacing">10</property>
 
 	  <child>
 	    <widget class="GtkButton" id="button1">
@@ -2125,79 +2172,6 @@
 	      <property name="x_padding">6</property>
 	      <property name="y_options"></property>
 	    </packing>
-	  </child>
-	</widget>
-	<packing>
-	  <property name="padding">0</property>
-	  <property name="expand">True</property>
-	  <property name="fill">True</property>
-	</packing>
-      </child>
-    </widget>
-  </child>
-</widget>
-
-<widget class="GtkDialog" id="variable-display-dialog">
-  <property name="visible">True</property>
-  <property name="title" translatable="yes">dialog1</property>
-  <property name="type">GTK_WINDOW_TOPLEVEL</property>
-  <property name="window_position">GTK_WIN_POS_NONE</property>
-  <property name="modal">False</property>
-  <property name="default_width">400</property>
-  <property name="default_height">300</property>
-  <property name="resizable">True</property>
-  <property name="destroy_with_parent">False</property>
-  <property name="has_separator">True</property>
-
-  <child internal-child="vbox">
-    <widget class="GtkVBox" id="dialog-vbox2">
-      <property name="visible">True</property>
-      <property name="homogeneous">False</property>
-      <property name="spacing">0</property>
-
-      <child internal-child="action_area">
-	<widget class="GtkHButtonBox" id="dialog-action_area2">
-	  <property name="visible">True</property>
-	  <property name="layout_style">GTK_BUTTONBOX_END</property>
-
-	  <child>
-	    <widget class="GtkButton" id="closebutton1">
-	      <property name="visible">True</property>
-	      <property name="can_default">True</property>
-	      <property name="can_focus">True</property>
-	      <property name="label">gtk-close</property>
-	      <property name="use_stock">True</property>
-	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="response_id">-7</property>
-	    </widget>
-	  </child>
-	</widget>
-	<packing>
-	  <property name="padding">0</property>
-	  <property name="expand">False</property>
-	  <property name="fill">True</property>
-	  <property name="pack_type">GTK_PACK_END</property>
-	</packing>
-      </child>
-
-      <child>
-	<widget class="GtkScrolledWindow" id="scrolledwindow5">
-	  <property name="visible">True</property>
-	  <property name="can_focus">True</property>
-	  <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
-	  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
-	  <property name="shadow_type">GTK_SHADOW_NONE</property>
-	  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
-
-	  <child>
-	    <widget class="GtkViewport" id="variable-display">
-	      <property name="visible">True</property>
-	      <property name="shadow_type">GTK_SHADOW_IN</property>
-
-	      <child>
-		<placeholder/>
-	      </child>
-	    </widget>
 	  </child>
 	</widget>
 	<packing>
