--- a/frontends/gui/debugger.glade
+++ b/frontends/gui/debugger.glade
@@ -105,6 +105,15 @@
 		      </child>
 
 		      <child>
+			<widget class="GtkMenuItem" id="continue_ignore_signal">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">Run Program and ignore si_gnal</property>
+			  <property name="use_underline">True</property>
+			  <signal name="activate" handler="OnContinueIgnoreSignalActivate" last_modification_time="Fri, 11 Oct 2002 18:21:18 GMT"/>
+			</widget>
+		      </child>
+
+		      <child>
 			<widget class="GtkMenuItem" id="stop-program-menu">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">_Stop Program</property>
