2002-10-15  Miguel de Icaza  <miguel@ximian.com>
	* frontends/gui/DebuggerGUI.cs: Check state of the backend before
	issuing a command, as even if we grey menu items, events can be
	queued.

	Reactivate the sensitivity code.

	Desensitize `Program to Debug' when running.

	* frontends/gui/ProgramToDebug.cs: Display the current settings,
	and allow the user to change those, instead of re-entering them.

svn path=/trunk/debugger/; revision=8278

--- a/frontends/gui/debugger.glade
+++ b/frontends/gui/debugger.glade
@@ -40,7 +40,7 @@
 		    <widget class="GtkMenu" id="file1_menu">
 
 		      <child>
-			<widget class="GtkMenuItem" id="program_to_debug1">
+			<widget class="GtkMenuItem" id="program-to-debug-menu">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">_Program to Debug</property>
 			  <property name="use_underline">True</property>
@@ -2132,13 +2132,14 @@
 
       <child internal-child="action_area">
 	<widget class="GtkHButtonBox" id="dialog-action_area1">
+	  <property name="border_width">5</property>
 	  <property name="visible">True</property>
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
+	  <property name="spacing">10</property>
 
 	  <child>
 	    <widget class="GtkButton" id="button1">
 	      <property name="visible">True</property>
-	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="label">gtk-cancel</property>
 	      <property name="use_stock">True</property>
@@ -2356,6 +2357,7 @@
 	<widget class="GtkHButtonBox" id="dialog-action_area2">
 	  <property name="visible">True</property>
 	  <property name="layout_style">GTK_BUTTONBOX_END</property>
+	  <property name="spacing">0</property>
 
 	  <child>
 	    <widget class="GtkButton" id="hexeditor-close">
