2003-03-24  Martin Baulig  <martin@ximian.com>
	* frontends/gui/debugger.glade: Disable the popup menu in the
	code-browser-notebook.

	* frontends/gui/SourceList.cs: Embed the setting of the contents
	in BeginNotUndoableAction()/EndNotUndoableAction().

	* frontends/gui/ProgramToDebug.cs: Don't make the dialog modal and
	don't use Dialog.Run().

svn path=/trunk/debugger/; revision=12780

--- a/frontends/gui/debugger.glade
+++ b/frontends/gui/debugger.glade
@@ -398,7 +398,7 @@
 		  <property name="scrollable">True</property>
 		  <property name="tab_hborder">2</property>
 		  <property name="tab_vborder">2</property>
-		  <property name="enable_popup">True</property>
+		  <property name="enable_popup">False</property>
 
 		  <child>
 		    <widget class="GtkHBox" id="hbox3">
