--- a/frontends/gui/debugger.glade
+++ b/frontends/gui/debugger.glade
@@ -113,7 +113,7 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkMenuItem" id="continue_ignore_signal">
+			<widget class="GtkMenuItem" id="continue-ignore-signal-menu">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">Run Program and ignore si_gnal</property>
 			  <property name="use_underline">True</property>
